[package]
authors = ["d0iasm"]
name = "saba"
version = "0.1.0"
edition = "2021"
default-run = "saba"

[workspace]
members = [ "saba_core", "net/wasabi" ]

[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi","dep:noli"]


[[bin]]
name = "saba_gui"
path = "src/saba_gui.rs"
required-features = ["gui"]

[[bin]]
name = "saba_cui"
path = "src/saba_cui.rs"
required-features = ["cui"]

[dependencies]
saba_core = { path = "./saba_core"}
net_wasabi = { path = "./net/wasabi", optional = true }
noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }